# opencv3_sketchs

./: README.md
chapter3_highgui/src/: highgui_functionality.cpp  highgui_functionality.h
chapter4_core_basic/src/: core_functionality_basic.cpp  core_functionality_basic.h  main.cpp
chapter5_core_pro/files/: test.doc  test.txt  test.xml  test.yaml
chapter5_core_pro/src/: core_functionality_pro.cpp  core_functionality_pro.h  main.cpp
chapter6_imgproc_imageprocess/src/: imgproc_functionality_imageprocess.cpp  imgproc_functionality_imageprocess.h  main.cpp
chapter7_imgproc_imgtransform/: CMakeLists.txt
chapter7_imgproc_imgtransform/src/: imgproc_functionality_imagetransform.cpp  imgproc_functionality_imagetransform.h  main.cpp
src/: main.cpp
